Slim SKILL.md, fix test regressions, guard hooks, extract core module
Docs:
- Slim SKILL.md under the 40k char limit; move CLI / anatomy / distillation /
  log-entry details into references/{cli-reference,anatomy,distillation,log-entry-examples}.md

Fixes:
- test_skill_doc: check CLI-flag assertions against SKILL.md union references/cli-reference.md
- test_english_content: scope the English-only rule with a documented exemption
  list (skip .venv pollution, the i18n table, the language-detection regex, and
  multilingual fixtures); web/README zh -> en
- hooks: wrap run() in a top-level guard so no unexpected failure can block the
  session; save_state tolerates OSError; add a regression test

Chores:
- .gitignore: ignore root-level *.png, output/, tmp/
- anatomy: mark DEPRECATED in docs + emit a runtime stderr notice (behavior unchanged)

Refactor:
- Extract config resolution + IO primitives into scripts/memory_lib/core.py
  (memory_tool.py 4162 -> 3907 lines); memory_tool re-imports them and
  self-bootstraps sys.path so the web adapter's dynamic load still resolves the
  package; add the iter_log_entries funnel; fix missing typing.Any import

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>